--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <main class="main" id="main">
 <!-- site content --> 
   <div class="content">
+    <h2>If you're not on a mobile device resize your browser to see the mobile menu</h2>
     <p>site content here</p>
     <p>
       Processor metafile adaptive supporting proxy, echo integer or network frequency. Reflective n-tier pc broadband patch connectivity log in. Frequency, connectivity normalizing silicon debugged, n-tier femtosecond anomoly supporting audio floating-point adaptive kilohertz sampling. Disk audio cascading, bridgeware reducer video normalizing for, internet, audio. Dithering software sequential sequential servicing mainframe cache indeterminate partitioned reducer, network mainframe recognition technician inversion.
