--- a/index.html
+++ b/index.html
@@ -4,45 +4,55 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Flexbox Mobile Dropdown Nav</title>
-  <link rel="stylesheet" href="css/navigation.css" />
+  <link rel="stylesheet" href="css/navigation.03-01-2015.prefixed.css" />
 </head>
 <body class="flex-site-wrapper">
 <header class="header-nav--menu-container" id="js_header">
-    <h1 class="header-nav-name">Site Name</h1>
-    <button class="button--header-nav" id="js_menuBtn">Menu &#x2261;</button>
+  <h1 class="header-nav-name">Flexbox Nav</h1>
+  <button class="button--header-nav" id="js_menuBtn">Menu &#x2261;</button>
 </header>
 <nav class="header-navigation" role="navigation">
   <ul class="navigation" id="js_nav">
-    <li class="navigation--item"><a href="#one">Home</a></li>
-    <li class="navigation--item"><a href="#two">About</a></li>
-    <li class="navigation--item"><a href="#three">Blog</a></li>
-    <li class="navigation--item"><a href="#four">Archives</a></li>
-    <li class="navigation--item"><a href="#five">Photography</a></li>
+    <li class="navigation--item">
+      <a href="#one">Home</a>
+    </li>
+    <li class="navigation--item">
+      <a href="#two">About</a>
+    </li>
+    <li class="navigation--item">
+      <a href="#three">Blog</a>
+    </li>
+    <li class="navigation--item">
+      <a href="#four">Archives</a>
+    </li>
+    <li class="navigation--item">
+      <a href="#five">Photography</a>
+    </li>
   </ul>
 </nav><!-- /.header-navigation -->
 
 <main class="main" id="main">
-<!-- site content --> 
+  <!-- site content -->
   <div class="content">
-    <h2>If you're not on a mobile device resize your browser to see the mobile menu</h2>
-    <p>site content here</p>
+    <h2>Flexbox Mobile Navigation With Dropdown</h2>
     <p>
-      Processor metafile adaptive supporting proxy, echo integer or network frequency. Reflective n-tier pc broadband patch connectivity log in. Frequency, connectivity normalizing silicon debugged, n-tier femtosecond anomoly supporting audio floating-point adaptive kilohertz sampling. Disk audio cascading, bridgeware reducer video normalizing for, internet, audio. Dithering software sequential sequential servicing mainframe cache indeterminate partitioned reducer, network mainframe recognition technician inversion.
+      Mobile/small screen navigation is a drop down. Large screens ( < 800px ) is a centered navigation.
     </p>
+    <hr/>
     <p>
-      Computer, services frequency bridgeware overflow log patch gigabyte internet logarithmic femtosecond integer inversion. Converter remote with software generator integral, data pulse log logarithmic cable, disk, capacitance development or. 
-    </p>
-    <p>
-      Computer pulse partitioned, dithering deviation, silicon. Generator bypass coordinated adaptive bridgeware or, sequential connectivity mainframe logarithmic, remote inversion inversion bypass developer. Reflective adaptive sequential, n-tier port partitioned in port scalar phase procedural software, controller partitioned. Connectivity port log, remote proxy, cascading converter analog, video transponder coordinated. Technician processor includes patch inversion computer solution analog read-only boolean metafile servicing, indeterminate integral. Silicon scan scalar processor solution plasma bypass procedural application silicon prototype recursive element cable for.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur dolorum possimus sit. Consectetur
+      consequatur consequuntur earum eligendi, error fugit hic ipsam ipsum, nisi odit, omnis optio perferendis possimus
+      ullam vero!
     </p>
   </div> <!-- /.content -->
 </main> <!-- /main -->
 
 
-<footer>
-  <p>this is a footer</p>
-</footer>
+<!--<footer>-->
+<!--<p>this is a footer</p>-->
+<!--</footer>-->
 
-<script src="js/navigation.js" async defer></script>
+
+<script src="js/navigation.min.js" async defer></script>
 </body>
 </html>
