revert to stable modernizr

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Flexbox Mobile Dropdown Nav</title>
   <link rel="stylesheet" href="css/navigation.03-01-2015.prefixed.css" />
-  <script src="js/modernizr.03-02-2015.js"></script>
+  <script src="js/modernizr.03022015.js"></script>
 </head>
 <body class="flex-site-wrapper">
 <header class="header-nav--menu-container" id="js_header">
