--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Flexbox Mobile Dropdown Nav</title>
-  <link rel="stylesheet" href="css/navigation.03-01-2015.prefixed.css" />
+  <!-- <link rel="stylesheet" href="css/navigation.03-01-2015.prefixed.css" /> -->
+  <link rel="stylesheet" href="css/navigation.03-02-2015.min.css">
   <script src="js/modernizr.03022015.js"></script>
 </head>
 <body class="flex-site-wrapper">
