--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <title>Flexbox Mobile Dropdown Nav</title>
   <!-- <link rel="stylesheet" href="css/navigation.03-01-2015.prefixed.css" /> -->
   <link rel="stylesheet" href="css/navigation.03-02-2015.min.css">
+  <!-- demo css -->
+  <style>
+    p{font-family:inherit;font-weight:400;font-size:1rem;line-height:1.5;margin-bottom:1.25rem;text-rendering:optimizeLegibility}footer,main{width:100%;margin:0 auto;max-width:62.5rem}footer:after,footer:before,main:after,main:before{content:" ";display:table}footer:after,main:after{clear:both}footer{padding-top:20px;padding-bottom:30px}.content{padding-left:.9375rem;padding-right:.9375rem;width:100%;float:left}.demo-list,.demo-list-sub{list-style:none}
+  </style>
   <script src="js/modernizr.03022015.js"></script>
 </head>
 <body class="flex-site-wrapper">
@@ -38,16 +42,70 @@
   <div class="content">
     <h2>Flexbox Mobile Navigation With Dropdown</h2>
     <p>
-      Mobile/small screen navigation is a drop down. Large screens ( < 800px ) is a centered navigation.
+      Mobile/small screen navigation is a drop down. Large screens ( < 800px ) is a centered navigation. <strong>Not dependent</strong>
+      on Jquery
     </p>
     <hr/>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur dolorum possimus sit. Consectetur
-      consequatur consequuntur earum eligendi, error fugit hic ipsam ipsum, nisi odit, omnis optio perferendis possimus
-      ullam vero!
+      I tried to build this with accessibility first. I'm still learning the ropes of
+      accessibility so if you see any issues please raise them. I would like
+      for this to be available to everyone :-).
     </p>
+    <p>
+      Support for this should work back to Internet Explorer 9. I haven't tested Opera Mini yet either.
+    </p>
+    <p>
+      File Size: CSS
+    </p>
+    <ol>
+      <li>
+        3.04KB Minified
+      </li>
+      <li>
+        1.4KB gzipped
+      </li>
+    </ol>
+    <p>
+      File Size: JS
+    </p>
+    <ol>
+      <li>
+        0.974KB Minified
+      </li>
+      <li>
+        0.874 gzipped
+      </li>
+    </ol>
+
+    <ul class="demo-list">
+      <li>
+        <h3>Source:</h3>
+         <ul class="demo-list-sub">
+           <li>
+             <a href="https://github.com/cdowdy/flexbox-mobile-dropdown-nav">Flexbox Dropdown Nav</a>
+           </li>
+         </ul>
+      </li>
+      <li>
+        <h3>Issues</h3>
+        <ul class="demo-list-sub">
+          <li>
+            <a href="https://github.com/cdowdy/flexbox-mobile-dropdown-nav/issues">Flexbox Nav Issues</a>
+          </li>
+        </ul>
+      </li>
+    </ul>
   </div> <!-- /.content -->
 </main> <!-- /main -->
+
+
+<footer>
+  <div class="content">
+    <hr/>
+    <p>Cory Dowdy </p>
+  </div>
+
+</footer>
 
 <script src="js/navigation.min.js" async defer></script>
 </body>
