use prefixed demo.min.css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- <link rel="stylesheet" href="css/navigation.03-01-2015.prefixed.css" /> -->
   <link rel="stylesheet" href="css/navigation.03-03-2015.min.css">
   <!-- demo css -->
-  <link rel="stylesheet" href="css/demo.03-03-2015.css"/>
+  <link rel="stylesheet" href="css/demo.03-03-2015.min.css"/>
   <script src="js/modernizr.03032015.js"></script>
 </head>
 <body class="flex-site-wrapper">
