--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Flexbox Mobile Dropdown Nav</title>
-  <!-- <link rel="stylesheet" href="css/navigation.03-01-2015.prefixed.css" /> -->
-  <link rel="stylesheet" href="css/navigation.03-03-2015.min.css">
+  <!-- flexbox nav css -->
+  <link rel="stylesheet" href="css/navigation.03-04-2015.min.css">
   <!-- demo css -->
-  <link rel="stylesheet" href="css/demo.03-03-2015.min.css"/>
+  <link rel="stylesheet" href="css/demo.03-04-2015.min.css"/>
   <script src="js/modernizr.03032015.js"></script>
 </head>
 <body class="flex-site-wrapper">
@@ -99,9 +99,6 @@
 <footer class="row">
   <div class="content">
     <hr/>
-    <!--<p>Cory Dowdy </p>-->
-    <!--<p><a href="https://github.com/cdowdy/flexbox-mobile-dropdown-nav">Github: </a></p>-->
-    <!--<p><a href="//corydowdy.com">Site</a></p>-->
     <ul class="contact-list">
       <li>Cory Dowdy</li>
       <li><a href="https://github.com/cdowdy/flexbox-mobile-dropdown-nav">Flexbox Nav Github</a></li>
