test operamini sniffing

--- a/index.html
+++ b/index.html
@@ -108,6 +108,6 @@
 
 </footer>
 
-<script src="js/navigation.min.js" async defer></script>
+<script src="js/navigation.js" async defer></script>
 </body>
 </html>
