updated demo page

--- a/index.html
+++ b/index.html
@@ -4,17 +4,23 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Flexbox Mobile Dropdown Nav</title>
+
   <!-- flexbox nav css -->
-  <link rel="stylesheet" href="css/navigation.03-04-2015.min.css">
+  <link rel="stylesheet" href="css/navigation.03-05-2015.min.css">
   <!-- demo css -->
-  <link rel="stylesheet" href="css/demo.03-04-2015.min.css"/>
+  <link rel="stylesheet" href="css/demo.03-05-2015.min.css"/>
+
+  <!-- flexbox nav custom modernizr -->
   <script src="js/modernizr.03032015.js"></script>
 </head>
-<body class="flex-site-wrapper">
+<body>
+
 <header class="header-nav--menu-container" id="js_header">
   <h1 class="header-nav-name">Flexbox Nav</h1>
   <button class="button--header-nav" id="js_menuBtn">Menu &#x2261;</button>
 </header>
+<!-- /.header-nav--menu-container -->
+
 <nav class="header-navigation" role="navigation">
   <ul class="navigation" id="js_nav">
     <li class="navigation--item">
@@ -108,6 +114,6 @@
 
 </footer>
 
-<script src="js/navigation.js" async defer></script>
+<script src="js/navigation.min.js" async defer></script>
 </body>
 </html>
