test classList polyfill for android 2.3.3

--- a/index.html
+++ b/index.html
@@ -115,5 +115,7 @@
 </footer>
 
 <script src="js/navigation.min.js" async defer></script>
+<!-- test classlist polyfilll for android 2.3 -->
+<script src="//cdnjs.cloudflare.com/ajax/libs/classlist/2014.01.31/classList.min.js" async></script>
 </body>
 </html>
