update index remove old js lib and remove ie screen

--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
       for this to be available to everyone :-).
     </p>
     <p>
-      Support for this should work back to Internet Explorer 9. I haven't tested Opera Mini yet either.
+      Support for this should work back to Internet Explorer 8 if you include modernizr with the flexbox and media queries tests. Modernizr is included in this repository.
     </p>
     <p>
       File Size: CSS
     </p>
     <ol>
       <li>
-        3.6KB Minified
+        4.1KB Minified
       </li>
       <li>
-        1.6KB gzipped
+        1.7KB gzipped
       </li>
     </ol>
     <p>
@@ -74,10 +74,10 @@
     </p>
     <ol>
       <li>
-        0.974KB Minified
+        3.1KB Minified
       </li>
       <li>
-        0.874 gzipped
+        1.5KB gzipped
       </li>
     </ol>
 
@@ -114,9 +114,7 @@
   </div>
 
 </footer>
-
-<script src="js/navigation.js" async defer></script>
-<!-- test classlist polyfilll for android 2.3 -->
-<!--<script src="//cdnjs.cloudflare.com/ajax/libs/classlist/2014.01.31/classList.min.js" async></script>-->
+<!-- this is the js needed to run in android 2.3, ie 8/9 and opera mini --> 
+<script src="js/navigation.android-2.3.min.js" async defer></script>
 </body>
 </html>
