--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Flexbox Mobile Dropdown Nav</title>
 
   <!-- flexbox nav css -->
-  <link rel="stylesheet" href="css/navigation.03-10-2015.min.css">
+  <link rel="stylesheet" href="dist/navigation.03-11-2015.min.css">
   <!-- demo css -->
   <link rel="stylesheet" href="css/demo.03-10-2015.min.css"/>
 
