test for opera mini

--- a/refactor.html
+++ b/refactor.html
@@ -81,21 +81,21 @@
 		</p>
 		<ol>
 			<li>
-				3.6KB Minified
+				4.7KB Minified
 			</li>
 			<li>
-				1.6KB gzipped
+				1.8KB gzipped
 			</li>
 		</ol>
 		<p>
-			File Size: JS
+			File Size: JS (with polyfill for support in old browsers)
 		</p>
 		<ol>
 			<li>
-				0.974KB Minified
+				3.3KB Minified
 			</li>
 			<li>
-				0.874 gzipped
+				1.9KB gzipped
 			</li>
 		</ol>
 		<!--<h2>How To Use</h2>-->
