--- a/index.html
+++ b/index.html
@@ -1,45 +1,59 @@
 <!doctype html>
 <html class="no-js" lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Flexbox Mobile Dropdown Nav</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Flexbox Mobile Dropdown Nav</title>
 
-  <!-- flexbox nav css -->
-  <link rel="stylesheet" href="dist/css/navigation.03-13-2015.min.css">
-  <!-- demo css -->
-  <link rel="stylesheet" href="css/demo.03-13-2015.min.css"/>
+	<!-- flexbox nav css -->
+	<link rel="stylesheet" href="dist/css/navigation.03-13-2015.min.css">
+	<!-- demo css -->
+	<link rel="stylesheet" href="css/demo.03-13-2015.min.css"/>
+	<style>
+		code {
+			background: white;
+			padding: .1em;
+			/*color: #b50000;*/
+			/*white-space: pre;*/
+			word-spacing: normal;
+			word-break: normal;
+			line-height: 1.5;
+			-moz-tab-size: 4;
+			tab-size: 4;
+			overflow: auto;
+		}
+	</style>
 
-  <!-- flexbox nav custom modernizr -->
-  <script src="js/modernizr.03032015.js"></script>
+	<!-- flexbox nav custom modernizr -->
+	<script src="js/modernizr.03032015.js"></script>
 </head>
 <body>
 
 <header class="fn-header" id="js-header">
-  <div class="fn-header__title-container">
-    <h1 class="fn-header__name">Flexbox Nav</h1>
-  </div>
-  <input type="checkbox" id="fn-noJs" class="fn-navTrigger__no-js" />
-  <label id="fn-noJs_label" for="fn-noJs"></label>
-  <nav class="fn-nav-container" role="navigation">
-    <ul class="fn-navigation"  id="js-nav">
-      <li class="fn-navigation__item">
-        <a href="#one">Home</a>
-      </li>
-      <li class="fn-navigation__item">
-        <a href="#two">About</a>
-      </li>
-      <li class="fn-navigation__item">
-        <a href="#three">Blog</a>
-      </li>
-      <li class="fn-navigation__item">
-        <a href="#four">Archives</a>
-      </li>
-      <li class="fn-navigation__item">
-        <a href="#five">Photography</a>
-      </li>
-    </ul>
-  </nav><!-- /.fn-nav-container -->
+	<div class="fn-header__title-container">
+		<h1 class="fn-header__name">Flexbox Nav</h1>
+	</div>
+	<input type="checkbox" id="fn-noJs" class="fn-navTrigger__no-js" />
+	<label id="fn-noJs_label" for="fn-noJs"></label>
+	<nav class="fn-nav-container" role="navigation">
+		<ul class="fn-navigation"  id="js-nav">
+			<li class="fn-navigation__item">
+				<a href="#one">Home</a>
+			</li>
+			<li class="fn-navigation__item">
+				<a href="#two">About</a>
+			</li>
+			<li class="fn-navigation__item">
+				<a href="#three">Blog</a>
+			</li>
+			<li class="fn-navigation__item">
+				<a href="#four">Archives</a>
+			</li>
+			<li class="fn-navigation__item">
+				<a href="#five">Photography</a>
+			</li>
+		</ul>
+	</nav><!-- /.fn-nav-container -->
 </header>
 <!-- /.fn-header -->
 
