--- a/index.html
+++ b/index.html
@@ -1,59 +1,60 @@
 <!doctype html>
 <html class="no-js" lang="en">
 <head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Flexbox Mobile Dropdown Nav</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Flexbox Mobile Dropdown Nav</title>
 
-	<!-- flexbox nav css -->
-	<link rel="stylesheet" href="dist/css/navigation.03-13-2015.min.css">
-	<!-- demo css -->
-	<link rel="stylesheet" href="css/demo.03-13-2015.min.css"/>
-	<style>
-		code {
-			background: white;
-			padding: .1em;
-			/*color: #b50000;*/
-			/*white-space: pre;*/
-			word-spacing: normal;
-			word-break: normal;
-			line-height: 1.5;
-			-moz-tab-size: 4;
-			tab-size: 4;
-			overflow: auto;
-		}
-	</style>
+  <!-- flexbox nav css -->
+  <link rel="stylesheet" href="dist/css/navigation.03-13-2015.min.css">
+  <!-- demo css -->
+  <link rel="stylesheet" href="css/demo.03-13-2015.min.css"/>
+  <style>
+    code {
+      background: white;
+      padding: .1em;
+      /*color: #b50000;*/
+      /*white-space: pre;*/
+      word-spacing: normal;
+      word-break: normal;
+      line-height: 1.5;
+      -moz-tab-size: 4;
+      tab-size: 4;
+      overflow: auto;
+    }
+  </style>
 
-	<!-- flexbox nav custom modernizr -->
-	<script src="js/modernizr.03032015.js"></script>
+  <!-- flexbox nav custom modernizr -->
+  <script src="js/modernizr.03032015.js"></script>
 </head>
 <body>
 
 <header class="fn-header" id="js-header">
-	<div class="fn-header__title-container">
-		<h1 class="fn-header__name">Flexbox Nav</h1>
-	</div>
-	<input type="checkbox" id="fn-noJs" class="fn-navTrigger__no-js" />
-	<label id="fn-noJs_label" for="fn-noJs"></label>
-	<nav class="fn-nav-container" role="navigation">
-		<ul class="fn-navigation"  id="js-nav">
-			<li class="fn-navigation__item">
-				<a href="#one">Home</a>
-			</li>
-			<li class="fn-navigation__item">
-				<a href="#two">About</a>
-			</li>
-			<li class="fn-navigation__item">
-				<a href="#three">Blog</a>
-			</li>
-			<li class="fn-navigation__item">
-				<a href="#four">Archives</a>
-			</li>
-			<li class="fn-navigation__item">
-				<a href="#five">Photography</a>
-			</li>
-		</ul>
-	</nav><!-- /.fn-nav-container -->
+  <div class="fn-header__title-container">
+    <h1 class="fn-header__name">Flexbox Nav</h1>
+  </div>
+  <input type="checkbox" id="fn-noJs" class="fn-navTrigger__no-js"/>
+  <label id="fn-noJs_label" for="fn-noJs"></label>
+  <nav class="fn-nav-container" role="navigation">
+    <ul class="fn-navigation" id="js-nav">
+      <li class="fn-navigation__item">
+        <a href="#one">Home</a>
+      </li>
+      <li class="fn-navigation__item">
+        <a href="#two">About</a>
+      </li>
+      <li class="fn-navigation__item">
+        <a href="#three">Blog</a>
+      </li>
+      <li class="fn-navigation__item">
+        <a href="#four">Archives</a>
+      </li>
+      <li class="fn-navigation__item">
+        <a href="#five">Photography</a>
+      </li>
+    </ul>
+  </nav>
+  <!-- /.fn-nav-container -->
 </header>
 <!-- /.fn-header -->
 
@@ -61,18 +62,24 @@
   <!-- site content -->
   <div class="content">
     <h2>Flexbox Mobile Navigation With Dropdown</h2>
+
     <p>
-      Mobile/small screen navigation is a drop down. Large screens ( < 800px ) is a centered navigation. <strong>Not dependent</strong>
+      Mobile/small screen navigation is a drop down. Large screens ( < 800px ) is a centered navigation. <strong>Not
+      dependent</strong>
       on Jquery
     </p>
+
     <p>
       I tried to build this with accessibility first. I'm still learning the ropes of
       accessibility so if you see any issues please raise them. I would like
       for this to be available to everyone :-).
     </p>
+
     <p>
-      Support for this should work back to Internet Explorer 8 if you include modernizr with the flexbox and media queries tests. Modernizr is included in this repository.
+      Support for this should work back to Internet Explorer 8 if you include modernizr with the flexbox and media
+      queries tests. Modernizr is included in this repository.
     </p>
+
     <p>
       File Size: CSS
     </p>
@@ -99,11 +106,11 @@
     <ul class="demo-list">
       <li>
         <h3>Source:</h3>
-         <ul class="demo-list-sub">
-           <li>
-             <a href="https://github.com/cdowdy/flexbox-mobile-dropdown-nav">Flexbox Dropdown Nav</a>
-           </li>
-         </ul>
+        <ul class="demo-list-sub">
+          <li>
+            <a href="https://github.com/cdowdy/flexbox-mobile-dropdown-nav">Flexbox Dropdown Nav</a>
+          </li>
+        </ul>
       </li>
       <li>
         <h3>Issues</h3>
@@ -114,8 +121,10 @@
         </ul>
       </li>
     </ul>
-  </div> <!-- /.content -->
-</main> <!-- /main -->
+  </div>
+  <!-- /.content -->
+</main>
+<!-- /main -->
 
 
 <footer class="row">
