--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Flexbox Mobile Dropdown Nav</title>
 
   <!-- flexbox nav css -->
-  <link rel="stylesheet" href="dist/css/navigation.03-13-2015.min.css">
+  <link rel="stylesheet" href="dist/css/flexbox-only/nav-flexbox-only.03-13-2015.min.css">
   <!-- demo css -->
   <link rel="stylesheet" href="css/demo.03-13-2015.min.css"/>
   <style>
