--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>Flexbox Mobile Dropdown Nav</title>
 
   <!-- flexbox nav css -->
-  <link rel="stylesheet" href="dist/css/navigation.03-16-2015.min.css">
+  <link rel="stylesheet" href="dist/css/navigation.min.65198b4d.css">
   <!-- demo css -->
-  <link rel="stylesheet" href="css/demo.03-13-2015.min.css"/>
+  <link rel="stylesheet" href="css/demo.css"/>
   <style>
     code {
       background: white;
